Bug 434998 - Enable the usage of the execCommand API for <xul:editor> elements; r=roc